# yuzubot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  config.py.example  docker-compose.yml  entrypoint.sh  pyproject.toml
assets/discimg/: base_design.af
cogs/: build.py  buildcard.py  hoyolab.py  meta.py  widget.py
cogs/utils/: baseclient.py  cipher.py  discimg.py  hoyoclient.py  hoyocreds.py  types.py  zzzclient.py  zzzemoji.py
cogs/utils/clients/: baseclient.py  zzzclient.py
scripts/: init.py  jsfetcher.py  jsparser.py
