[project]
name = "yuzubot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.5",
    "discord>=2.3.2",
    "jishaku>=2.6.3",
    "pillow>=12.1.1",
    "requests>=2.32.5",
]
